v3.0.0/_sources/plugins/device_details_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.device_details_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.device_details_info -- Information module for Device Details
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.device_details_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Device Details.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-identifier"></div>
                    <b>identifier</b>
                    <a class="ansibleOptionLink" href="#parameter-identifier" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Identifier query parameter. One of keywords macAddress or uuid or nwDeviceName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-searchBy"></div>
                    <b>searchBy</b>
                    <a class="ansibleOptionLink" href="#parameter-searchBy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SearchBy query parameter. MAC Address or Device Name value or UUID of the network device.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-timestamp"></div>
                    <b>timestamp</b>
                    <a class="ansibleOptionLink" href="#parameter-timestamp" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Timestamp query parameter. Epoch time(in milliseconds) when the device data is required.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Device Details reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Device Details object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Device Details
      cisco.dnac.device_details_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        timestamp: string
        searchBy: string
        identifier: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;HALastResetReason&quot;: &quot;string&quot;,
      &quot;managementIpAddr&quot;: &quot;string&quot;,
      &quot;HAPrimaryPowerStatus&quot;: &quot;string&quot;,
      &quot;redundancyMode&quot;: &quot;string&quot;,
      &quot;communicationState&quot;: &quot;string&quot;,
      &quot;nwDeviceName&quot;: &quot;string&quot;,
      &quot;redundancyUnit&quot;: &quot;string&quot;,
      &quot;platformId&quot;: &quot;string&quot;,
      &quot;redundancyPeerState&quot;: &quot;string&quot;,
      &quot;nwDeviceId&quot;: &quot;string&quot;,
      &quot;redundancyState&quot;: &quot;string&quot;,
      &quot;nwDeviceRole&quot;: &quot;string&quot;,
      &quot;nwDeviceFamily&quot;: &quot;string&quot;,
      &quot;macAddress&quot;: &quot;string&quot;,
      &quot;collectionStatus&quot;: &quot;string&quot;,
      &quot;deviceSeries&quot;: &quot;string&quot;,
      &quot;osType&quot;: &quot;string&quot;,
      &quot;clientCount&quot;: &quot;string&quot;,
      &quot;HASecondaryPowerStatus&quot;: &quot;string&quot;,
      &quot;softwareVersion&quot;: &quot;string&quot;,
      &quot;nwDeviceType&quot;: &quot;string&quot;,
      &quot;overallHealth&quot;: 0,
      &quot;memoryScore&quot;: 0,
      &quot;cpuScore&quot;: 0,
      &quot;noiseScore&quot;: 0,
      &quot;utilizationScore&quot;: 0,
      &quot;airQualityScore&quot;: 0,
      &quot;interferenceScore&quot;: 0,
      &quot;wqeScore&quot;: 0,
      &quot;freeMbufScore&quot;: 0,
      &quot;packetPoolScore&quot;: 0,
      &quot;freeTimerScore&quot;: 0,
      &quot;memory&quot;: &quot;string&quot;,
      &quot;cpu&quot;: &quot;string&quot;,
      &quot;noise&quot;: &quot;string&quot;,
      &quot;utilization&quot;: &quot;string&quot;,
      &quot;airQuality&quot;: &quot;string&quot;,
      &quot;interference&quot;: &quot;string&quot;,
      &quot;wqe&quot;: &quot;string&quot;,
      &quot;freeMbuf&quot;: &quot;string&quot;,
      &quot;packetPool&quot;: &quot;string&quot;,
      &quot;freeTimer&quot;: &quot;string&quot;,
      &quot;location&quot;: &quot;string&quot;,
      &quot;timestamp&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

